hb_task1b_ws/log/build_2023-10-03_16-24-11/hb_task_1b/stderr.log
  File "/home/ansuman/eyrc_hb/hb_task1b_ws/install/hb_task_1b/lib/python3.10/site-packages/hb_task_1b/controller.py", line 187
    ki=0.01s
          ^
SyntaxError: invalid decimal literal

